# rust-os

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
