[package]
name = "rust-os"
version = "0.1.0"
edition = "2021"
authors = ["Gunnar Westerling <gunnarwesterling@gmail.com>"]

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.release]
lto = true
debug = true